--- a/_posts/2017-11-06-logback 설정파일 위치 명시적으로 설정.md
+++ b/_posts/2017-11-06-logback 설정파일 위치 명시적으로 설정.md
@@ -2,9 +2,8 @@
 layout: post
 title:  "logback 설정파일 위치 명시적으로 설정"
 subtitle:   "Spring"
-categories: Document
+categories: document
 tags: spring
-comments: false
 ---
 
 pom.xml과 web.xml에 다음과 같이 설정해주면 환경(개발, 테스트, 운영)에 따라 세팅값을 차등적용할 수 있도록 파일 경로를 명시할 수 있다.
