--- a/_posts/02.Java/2017-11-25-효과적으로 TDD, 리팩토링, OOP를 연습하는 방법.md
+++ b/_posts/02.Java/2017-11-25-효과적으로 TDD, 리팩토링, OOP를 연습하는 방법.md
@@ -33,5 +33,8 @@ comments: true
 - 규칙 9: 게터/세터/프로퍼티를 쓰지 않는다.
 
 
-
 위의 9가지의 원칙을 지키면서 코딩하기란 쉽지 많은 않다. 위의 원칙을 지키면서 코드 작성을 하기 위해선 지속적인 리팩토링으로 구조를 변경해 나가야 하며, 리팩토링을 하기 위한 선행 조건은 자동화된 단위테스트이다. **따라서 이 원칙을 지키기 위한 노력은 자연스럽게 TDD, 리팩토링, OOP 연습을 할 수 있다.**
+
+
+
+필자는 기존에 주로 SI프로젝트를 진행하다보니 코드 품질보다는 빡빡한 일정안에서 기능구현을 위주로 코딩을 하게되었다. 그로인해 TDD, 리팩토링, OOP와는 거리가 멀었다. 앞으로 객체지향 생활체조를 통해 보다 책임감있는 코드를 작성할 수 있게 되었으면 한다.
