--- a/_posts/02.Java/2017-11-26-객체지향 생활체조-규칙1.md
+++ b/_posts/02.Java/2017-11-26-객체지향 생활체조-규칙1.md
@@ -13,7 +13,7 @@ comments: true
 
 ### 규칙1. 메서드당 들여쓰기 한 번
 
-응집력이 강한 코드를 작성하기란 쉽지 않다. 객체지향 생활체조-규칙1은 응집력이 강한 코드를 작성할 수 있는 가이드를 명확하게 제시해 주고 있다.
+응집력이 강한 코드를 작성하기란 쉽지 않다. [객체지향 생활체조-규칙1](https://developerfarm.wordpress.com/2012/01/26/object_calisthenics_2)은 응집력이 강한 코드를 작성할 수 있는 가이드를 명확하게 제시해 주고 있다.
 
 우리는 메서드가 한가지 일만을 담당하는지 확인해 봐야 한다. 쉽게 말해 한 메서드 안에 중첩된 제어구조가 있지는 않은지, 있다면 해당 메서드는 다단계 추상화를 코드로 작성한 것이다.(한 가지 이상의 일을 하고 있다는 것을 의미한다.)
 
