--- a/_posts/02.Java/2017-11-26-객체지향 생활체조-규칙1.md
+++ b/_posts/02.Java/2017-11-26-객체지향 생활체조-규칙1.md
@@ -15,9 +15,9 @@ comments: true
 
 응집력이 강한 코드를 작성하기란 쉽지 않다. [객체지향 생활체조-규칙1](https://developerfarm.wordpress.com/2012/01/26/object_calisthenics_2)은 응집력이 강한 코드를 작성할 수 있는 가이드를 명확하게 제시해 주고 있다.
 
-우리는 메서드가 한가지 일만을 담당하는지 확인해 봐야 한다. 쉽게 말해 한 메서드 안에 중첩된 제어구조가 있지는 않은지, 있다면 해당 메서드는 다단계 추상화를 코드로 작성한 것이다.(한 가지 이상의 일을 하고 있다는 것을 의미한다.)
+우리는 메서드가 한가지 일만을 담당하는지 확인해 봐야 한다. **쉽게 말해 한 메서드 안에 중첩된 제어구조가 있지는 않은지, 있다면 해당 메서드는 다단계 추상화를 코드로 작성한 것이다.(한 가지 이상의 일을 하고 있다는 것을 의미한다.)**
 
-메서드를 작성할 떄 한가지 일만을 담당하도록 코드를 작성하면, 재사용 수준이 기하급수적으로 늘어나게 된다. 
+메서드를 작성할 때 한가지 일만을 담당하도록 코드를 작성하면, 재사용 수준이 기하급수적으로 늘어나게 된다. 
 
 아래의 중첩 제어구조를 가진 코드를 리팩토링 하는 예제를 확인해 보도록 하자.
 
@@ -58,4 +58,4 @@ class Board {
 }
 ```
 
-위의 리팩토링으로서 발생하는 효과는 코드의 가독성이 향상됨으로서 유지보수나 버그의 존재를 판별하기 쉽고, 메소드 명을 통해서 주석을 작성하지 않더라도, 해당기능을 유추할 수 있다는 점이다.
+위의 리팩토링으로서 발생하는 효과는 재사용성 이외에도 **코드의 가독성이 향상 됨으로서 유지보수나 버그의 존재를 판별하기 쉽고, 메소드 명을 통해서 주석을 작성하지 않더라도, 해당기능을 유추**할 수 있다는 점이다.
