--- a/_posts/02.Java/2017-11-26-객체지향 생활체조-규칙1.md
+++ b/_posts/02.Java/2017-11-26-객체지향 생활체조-규칙1.md
@@ -7,6 +7,8 @@ tags: java
 comments: true
 ---
 
+> 해당 글은 [developerFarm 개발자 블로그의 농장객체지향 생활체조](https://developerfarm.wordpress.com/2012/02/03/object_calisthenics_summary)를 참고하여 정리한 글 입니다.
+
 앞서 효과적으로 TDD, 리팩토링, OOP를 연습하는 방법에 대해 정리해 보았다. 해당 글에서 제시해준 객체지향 생활체조의 규칙들을 지켜나감으로서 객체지향 설계 원칙에 부함되는 코드를 작성할 수 있도록 정리해 보겠다.
 
 
