--- a/_posts/02.Java/2017-11-26-객체지향 생활체조-규칙2.md
+++ b/_posts/02.Java/2017-11-26-객체지향 생활체조-규칙2.md
@@ -17,7 +17,7 @@ comments: true
 
 
 
-###1. 보호절 사용
+####1. 보호절 사용
 
 ```java
 double getPayAmount() {     
@@ -47,7 +47,7 @@ double getPayAmount() {
 
 
 
-### 2. 다형성 사용
+####2. 다형성 사용
 
 ```java
 public void barkAnimal(Animal animal) {
