--- a/_posts/01.Spring/2017-12-14-[WebFlux]1.웹플럭스.md
+++ b/_posts/01.Spring/2017-12-14-[WebFlux]1.웹플럭스.md
@@ -113,13 +113,67 @@ http://jess-m.tistory.com/21
     - 핸들러가 handleResult 한다. (결과를 뽑음)
     - @ResponseBody의 핸들러 중 Mono로 반환되는 경우를 예로 보면, ResponseBodyResultHandler 라는 클래스가 handleResult 메소드를 호출하여 결과값을 생성하여 write 한다.
 
- 
+
 
 출처: 
 
 http://jess-m.tistory.com/21
 
- [Jess's Home]
+
+
+# 리액티브 사용 사례
+
+ 
+
+새로 시작하는 개발자들이 대답을 듣기 어려운 질문은 "그래서 뭐가 좋다는 거야?"일 것이다. 이제 몇 가지 엔터프라이즈 환경에서의 일반적인 사용 패턴을 살펴보자.
+
+ 
+
+**외부 서비스 호출(External Service Call)**
+
+요즘의 많은 백엔드 서비스들은 REST 방식(즉 HTTP 기반으로 동작한다)이며 그래서 기반 프로토콜은 기본적으로 응답을 대기(blocking)해야 하고 동기적(synchronous)으로 수행된다. 여기에 FRP가 비빌 언덕이 없어보이지만, 사실 이 지점이야말로 FRP가 적용될 수 있는 부분이다. 그 이유는 이런 서비스들은 또 다른 서비스들을 호출하도록 구현되며, 그래서 수많은 서비스들이 첫 번째 호출의 결과와 관련있기 때문이다. 수많은 입출력(IO)가 수행되는 과정에서, 만약 어떤 요청을 전송하기 전에 다른 호출이 완료되기를 기다려야 한다면, 서비스 사용자는 응답 데이터가 만들어지기도 전에 좌절하여 포기할 수도 있다. 그렇기 때문에 외부 서비스를 호출하는 경우, 특히 그 서비스 호출들이 복잡하게 연결되어 있는 경우야 말로 최적화하기 좋은 지점이 된다. FRP는 이러한 동작들을 수행하는 로직을 조합할 수 있도록 보장하며, 그래서 개발자들은 서비스를 호출하는 코드를 쉽게 작성할 수 있다.
+
+ 
+
+**높은 동시성 메세지 소비자(Highly Concurrent Message Consumers)**
+
+메세지 프로세싱은, 특히 고도의 동시 처리를 수행한다는 점에서 엔터프라이즈 어플리케이션에서 흔히 사용된다. 리액티브 프레임워크들은 마이크로 벤치마크를 측정하여 JVM 내에서 1초당 수없이 많은 메세지를 처리할 수 있는지 보여주기를 좋아한다. 벤치마크 결과는 믿기 어려울 정도로 놀라운데(초당 수천만 메세지들이 쉽사리 처리된다), 사실 다소 인위적인 결과일 수 있다. - 벤치마크 테스트를 위해 단순한 for 반복문을 사용했다고 한다면 그다지 감동적이지 않을 것이기 때문이다. 그렇다고 해서 이런 시도를 섣불리 그만둬서는 안 되는데, 성능이 문제가 되는 경우는 흔하며 그런 경우 (성능 향상을 위한) 모든 기여는 감사히 받아들여지기 때문이다. 리액티브 패턴들은 (이벤트가 멋지게 메세지로 번역되기 때문에) 메세지 프로세싱과 자연스럽게 들어맞으며, 그래서 보다 많은 메세지들을 처리하는 방법이 있기만 하다면 주의를 기울일 필요가 있다.
+
+ 
+
+**스프레드시트(SpreadSheet)**
+
+스프레드시트는 엔터프라이즈 어플리케이션은 아니지만, 엔터프라이즈 환경에서 일하는 모든 사람들은 이에 관련되어 있고, FRP의 철학과 FRP 구현의 어려움을 잘 이해하는 데에 도움을 준다. 만약 B셀이 A셀에 의존하고 있고, C셀이 A셀과 B셀 모두에 영향을 받는 상황을 생각해보자. 어떻게 하면 어떤 변화 이벤트도 B에 전달되기 전에 C가 갱신될 것을 보장하면서 A의 변화를 전파할 수 있을까? 만약 당신이 사용하는 프레임워크가 매우 액티브하다면 단순히 "걱정할 필요 없다. 그저 의존관계를 선언하기만 하면 된다."라고 말할 것이고, 이것이 바로 요컨대 스프레드시트 프로그램의 진정한 힘일 것이다. 이 부분이 FRP와 단순한 이벤트 드리븐 프로그래밍의 차이를 보여주는 것이라 할 수 있다. - FRP는 "지능형 라우팅(intelligent routing)"에 지능을 부여한다.
+
+ 
+
+**(비)동기 처리에 대한 추상화(Abstraction Over (A)synchronous Processing)**
+
+이것은 다소 추상적인 사용예이고, 그래서 피해야 할 영역에 들어서는 것이 수도 있다. 여기에는 지금까지 언급했던 내용들과 (매우 많이) 겹치는 부분이 있지만, 그래도 다뤄볼 만 할 것이다. 첫 번째 내용은 친숙한 (그리고 타당한) 것인데, 개발자들이 추가적인 추상 계층을 받아들일 수만 있다면, 자신이 호출하는 코드가 동기적이든 비동기적이든 신경쓰지 않아도 된다는 것이다. 비동기 프로그래밍을 다룬다는 것이 뇌에 과부하를 주는 것이기 때문에 이런 발상은 꽤 유용하다고 할 수 있다. 리액티브 프로그래밍이 이런 이슈를 해결하는 유일한 방법은 아니지만, FRP의 구현자들은 그들이 만든 도구들이 유용할 수 있도록 이에 대해 충분히 고려해왔다.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ### 참조
 
