--- a/_posts/01.Spring/2018-01-22-스프링부트 애플리케이션으로 JUnit5 실행하기.md
+++ b/_posts/01.Spring/2018-01-22-스프링부트 애플리케이션으로 JUnit5 실행하기.md
@@ -18,7 +18,7 @@ tags: spring
 
 - `Gradle project`로 프로젝트를 생성합니다.
 
-![20180122_01_01](./images/20180122_01_01.png)
+![20180122_01_01](images/20180122_01_01.png)
 
 - 스프링 버전은 `2.0.0.M7`을 선택해 주고, web 모듈을 선택해 줍니다.
 
