상대경로 세팅

--- a/_posts/01.Spring/2018-01-22-스프링부트 애플리케이션으로 JUnit5 실행하기.md
+++ b/_posts/01.Spring/2018-01-22-스프링부트 애플리케이션으로 JUnit5 실행하기.md
@@ -22,7 +22,7 @@ tags: spring
 
 - 스프링 버전은 `2.0.0.M7`을 선택해 주고, web 모듈을 선택해 줍니다.
 
-![20180122_01_02](./images/20180122_01_02.png)
+![20180122_01_02](images/20180122_01_02.png)
 
 ### 3. Gradle 의존성
 
