--- a/_posts/01.Spring/2018-01-22-스프링부트 애플리케이션으로 JUnit5 실행하기.md
+++ b/_posts/01.Spring/2018-01-22-스프링부트 애플리케이션으로 JUnit5 실행하기.md
@@ -4,7 +4,7 @@ title: "스프링부트 애플리케이션으로 JUnit5 실행하기"
 subtitle: "Spring"
 categories: document
 tags: spring
-permalink: /_post/01.Srping/
+permalink: /_posts/01.Spring/
 ---
 
 ### 1. 소개
