docuement add & update

--- a/_posts/01.Spring/2018-01-22-스프링부트 애플리케이션으로 JUnit5 실행하기.md
+++ b/_posts/01.Spring/2018-01-22-스프링부트 애플리케이션으로 JUnit5 실행하기.md
@@ -4,6 +4,8 @@ title: "스프링부트 애플리케이션으로 JUnit5 실행하기"
 subtitle: "Spring"
 categories: document
 tags: spring
+published: true
+comments: true
 ---
 
 ### 1. 소개
