2018년 로드맵 내용 추가

--- a/_posts/98.ETC/2018-01-23-2018년-로드맵.md
+++ b/_posts/98.ETC/2018-01-23-2018년-로드맵.md
@@ -10,7 +10,7 @@ comments: true
 
 
 
-2018년 한해동안 백엔드 프로그래머로서 성장하기 위해 앞으로 해야 할 것들을 정리하기로 하였습니다. 해당 글은 [2018년 웹 개발자가 되기 위한 로드맵](https://github.com/devJang/developer-roadmap)을 참고하여 작성을 하였으며, 관심을 가지고 있는 기술, 앞으로 습득해야 하는 부분 혹은 알고는 있지만 깊이가 없는 것들을 지속적으로 정리해 나갈 예정입니다. 또한 2018년이 마무리될 시기에 내가 얼마나 발전을 하였는지 내가 무엇을 이루었는지를 되돌아 볼수 있는 지표가 되는 글이기도 합니다.
+2018년 한해동안 백엔드 프로그래머로서 성장하기 위해 앞으로 해야 할 것들을 정리하기로 하였습니다. 해당 글은 [2018년 웹 개발자가 되기 위한 로드맵](https://github.com/devJang/developer-roadmap)와 [Things Java Programmers Should Learn in 2018](https://dzone.com/articles/5-things-java-programmer-should-learn-in-2018)을 참고하여 작성을 하였으며, 관심을 가지고 있는 기술, 앞으로 습득해야 하는 부분 혹은 알고는 있지만 깊이가 없는 것들을 지속적으로 정리해 나갈 예정입니다. 또한 2018년이 마무리될 시기에 내가 얼마나 발전을 하였는지 내가 무엇을 이루었는지를 되돌아 볼수 있는 지표가 되는 글이기도 합니다.
 
 현재 저는 만 3년까지 약간 부족(?)한 백엔드 프로그래머로 활동하고 있습니다. 2017년까지만 해도 SI 회사에서 주로 웹 개발 하였고, 2017년 말 부터 새로운 보금자리에서 백엔드 개발자로서 활동하고 있습니다. 아래의 글귀를 되새기며 프로그래머로서, 한 사람으로서 성숙하고 성장할 수 있는 2018년 한해가 되기를 소망하며 모두 화이팅!~
 
@@ -75,6 +75,9 @@ comments: true
   - Reactive Programming
   - Functional Programming
   - OOP
+  - Java
+    - Java 성능 튜닝 : JVM 내부, GC 동작 및 Java 성능 튜닝
+    - 네트워크 프로그래밍 : 소켓 프로그래밍 및 네트워킹 기본 사항
 - ETC
   - 검색 엔진
     - ElasticSearch
@@ -119,3 +122,4 @@ comments: true
 ### 5. Reference
 
 - https://github.com/devJang/developer-roadmap
+- https://dzone.com/articles/5-things-java-programmer-should-learn-in-2018
