미스터블루 원간세미나 자료

--- a/_posts/07.IntelliJ/2018-01-27-IntelliJ 팁.md
+++ b/_posts/07.IntelliJ/2018-01-27-IntelliJ 팁.md
@@ -1,3 +1,15 @@
+---
+layout: post
+title: "IntelliJ 팁"
+subtitle: "IntelliJ"
+categories: document
+tags: intellij
+published: false
+comments: true
+---
+
+
+
 ### Productivity Guide
 
 - 이 기능은 인텔리J 개발사에서 유용하다고 생각하는 기능들을 정리하여 유저가 실제 사용한 적이 있는지 자동으로 기록해준다.
