--- a/_posts/02.Java/2018-02-18-[클린코드] 들어가며.md
+++ b/_posts/02.Java/2018-02-18-[클린코드] 들어가며.md
@@ -28,7 +28,7 @@ comments: true
 
 
 
-## 1 유지보수성이란?
+## 1. 유지보수성이란?
 
 소프트웨어 시스템을 고치기 쉽고 어려운 정도를  **유지보수성**이라고 합니다. 유지보수성은 소스 코드의 속성에 따라 달리집니다. 이 책은 소스 코드의 속성이 무엇인지 알아보고 고치기 쉬운 소스 코드를 작성하는데 유용한 10대 가이드라인을 제시합니다. 국제 표준 규격 ISO/IEC 25010:2011에 따르면 소프트웨어 품질 아래와 같이 분류합니다.
 
@@ -49,7 +49,7 @@ comments: true
 
 
 
-### 1.1 소프트웨어 유지보수의 4대 유형
+### 1.1. 소프트웨어 유지보수의 4대 유형
 
 소프트웨어 유지보수를 아래와 같이 4가지 유형으로 분류할 수 있습니다.
 
@@ -60,7 +60,7 @@ comments: true
 
 
 
-## 2 유지보수의 중요성
+## 2. 유지보수의 중요성
 
 앞서 말했듯이 유지보수성은 ISO 25010에 규정된 소프트웨어 제품의 8대 품질 특성 중 하나로 방대한 주제이지만 크게 두가지로 분류하자만 아래와 같습니다.
 
@@ -69,19 +69,19 @@ comments: true
 
 
 
-### 2.1 유지보수는 다른 비즈니스에 지대한 영향을 끼친다.
+### 2.1. 유지보수는 다른 비즈니스에 지대한 영향을 끼친다.
 
 서비스를 운영하다보면 교정형 유지보수와 완료형 유지보수는 끊임없이 쏟아지는 것을 대부분 경험하고 있으실 거라고 생각합니다. 유지보수 효율을 높이면 새 기능 구현 등 다른 업무에 인력을 투입할 여유가 생기고 신속한 개선이 이루어지면 신제품 및 새로운 서비스 출시를 앞당길 수 있습니다. 비즈니스 측면에서 볼 때 동일한 개발자 인력 구성으로 보다 좋은 효율을 만드는 것도 중요하지만 그 보다 더욱 중요한 것은 비즈니스 시장을 선점하냐 못하느냐입니다.
 
 
 
-### 2.2 유지보수는 다른 품질 특성을 가능케 한다
+### 2.2. 유지보수는 다른 품질 특성을 가능케 한다
 
 유지보수성이 뛰어난 시스템은 보안 버그 수정 등 **다른 품질 영역의 개선을 도모하기 쉽습니다.** 좀 더 일반적으로 말하면, ISO 25010에서 규정된 성능, 기능 안정성, 보안 등 유지보수를 제외한 **7개 품질 특성에 관해 소프트웨어 시스템을 최적화하려면 소스 코드 변경을 불가피 합니다.**
 
 
 
-## 3 유지보수 3대 원칙
+## 3. 유지보수 3대 원칙
 
 - 단순한 가이드라인을 지키기만 해도 유지보수성은 나아진다.
 - **유지보수성은 나중으로 미룰 문제가 아니라 개발 프로젝트 시작 단계부터 반드시 염두에 두어야 하고 하나씩 실천하는 자세가 중요하다.**
@@ -91,19 +91,19 @@ comments: true
 
 
 
-### 3.1 단순한 가이드라인을 지키기만 해도 유지보수성은 나아진다.
+### 3.1. 단순한 가이드라인을 지키기만 해도 유지보수성은 나아진다.
 
 필자는 세상에 완벽한 가이드라인이란 존재하지 않는다고 생각합니다. 한 예로 들자면, 불필요한 추상화를 통해서 오히려 가독성이 떨어지고 코드베이스가 증가할 때도 있으며, 성능이 중요한 로직의 경우 성능 효율성 때문에 유지보수성을 배제하고 작성할 때도 있습니다. 다만 이 책에서 제시하는 가이드라인은 지키려고 노력한다면 완벽하지는 않지만 충분한 유지보수를 보장하는 제품을 생산할 수 있도록 도와줍니다.
 
 
 
-### 3.2 유지보수성은 나중으로 미룰 문제가 아니라 하나씩 실천하는 자세가 중요하다
+### 3.2. 유지보수성은 나중으로 미룰 문제가 아니라 하나씩 실천하는 자세가 중요하다
 
 유지보수성은 개발 프로젝트를 시작할 때문에 고민할 문제입니다. 10대 가이드라인 중 하나를 어겼다고하여 전체 시스템 유지보수성에 얼마나 큰 영향을 미칠지는 가늠하기는 힘들지만, **유지보수 가능한 시스템을 구축하려면 개발자 전원이 가이드라인을 지키는 것이 중요합니다.**
 
 
 
-## 4 유지보수성 가이드라인
+## 4. 유지보수성 가이드라인
 
 10대 가이드라인에 대해 미리 간단하게 정리해 보겠습니다.
 
