--- a/_posts/02.Java/2018-02-19-[클린코드] 1장 코드단위를 짧게하라.md
+++ b/_posts/02.Java/2018-02-19-[클린코드] 1장 코드단위를 짧게하라.md
@@ -14,7 +14,7 @@ comments: true
 
 
 
-## 1 가이드라인
+## 1. 가이드라인
 
 | 분류 | 비고                                                         |
 | :--: | ------------------------------------------------------------ |
@@ -26,13 +26,13 @@ comments: true
 
 
 
-## 2 필요성
+## 2. 필요성
 
 단위를 짧게 유지하면 테스트, 분석, 재사용성 모두 좋아지는 장점이 있습니다.
 
 
 
-### 2.1 짧은 단위는 테스트하기 쉽다
+### 2.1. 짧은 단위는 테스트하기 쉽다
 
 하는 일이 하나뿐인 코드는 비교적 테스트하기 쉽습니다. 짧은 단위는 보통 딱 한가지 일만 하지만, 긴 단위는 여러 일을 처리하며 다양한 책임을 지는 경향이 있습니다.
 
@@ -44,25 +44,25 @@ comments: true
 
 
 
-### 2.3 짧은 단위가 재사용하기 쉽다
+### 2.3. 짧은 단위가 재사용하기 쉽다
 
 긴 단위보다 짧은 단위가 **재사용 가능한 코드가 될 가능성이 높습니다.** 긴 단위는 대개 특정한 세부 로직을 구현하거나 여러 기능을 특수한 형태로 조합한 경우가 많아 짧은 단위보다 기능이 집중된 편입니다. 이런 기능을 다시 쓸 일은 많지 않아서 재사용하기 어렵지만, 짧은 단위는 확실히 더 범용성적이어서 다른 요구사항에도 잘 맞는 가능성이 높아 재사용하기 좋습니다. 코드를 재사용하면 전체 코드베이스를 줄일 수 있는 효과도 있습니다.
 
 
 
-## 3 적용 가이드
+## 3. 적용 가이드
 
 모든 로직을 15라인을 넘지 않게 작성하는 것은 사실상 불가능 합니다. 하나의 단위를 단일책임만 갖도록 코드를 작성하더라도, 15라인으로는 작성할 수 없는 복잡하고 방대한 로직이 필요할 경우가 있습니다. **15라인을 넘지 않는 코드라인을 작성하라** 라는 가이드라인은 개발자의 명확한 라인수 제한을 통해 보다 유지보수성이 좋은 코드를 작성할 수 있도록 도와줍니다.
 
 
 
-### 3.1 리팩토링 기법으로 가이드라인을 적용
+### 3.1. 리팩토링 기법으로 가이드라인을 적용
 
 단위에 새 기능을 넣어 확장하는 경우 기존에는 15라인이 넘지 않았지만, 확장함으로서 15라인이 넘어가는 경우가 발생할 수도 있습니다. 이런 상황에서 우리는 코드 악취를 의심해야 합니다. 15라인이 넘는 코드는 
 
 단위 코드를 짧게 하는 두 가지 리팩토링 기법을 소개합니다.
 
-#### 3.1.1 리팩토링 기법 : 메서드 추출
+#### 3.1.1. 리팩토링 기법 : 메서드 추출
 
 단위에 있는 코드를 메서드로 추출함으로서 **구현부가 단순**해 지는 효과를 얻을 수 있습니다. 또한 명확하고 가독성 좋은 메서드명을 사용할 경우 주석이 없더라도, 해당 메서드가 어떠한 역할을 하는지 쉽게 알 수 있습니다. 이를 **소스 코드가 스스로를 설명하는 형태(self-exsplanatory)**라고 합니다.
 
@@ -72,5 +72,5 @@ comments: true
 
 
 
-#### 3.1.2 리팩토링 기법 : 메서드를 메서드 객체로 대체
+#### 3.1.2. 리팩토링 기법 : 메서드를 메서드 객체로 대체
 
