--- a/_posts/02.Java/2018-02-21-[클린코드] 1장 코드단위를 짧게하라.md
+++ b/_posts/02.Java/2018-02-21-[클린코드] 1장 코드단위를 짧게하라.md
@@ -4,7 +4,7 @@ title: "[클린코드] 1장 코드단위를 짧게하라"
 subtitle: "Java"
 categories: document
 tags: java
-published: false
+published: true
 comments: true
 ---
 
@@ -72,5 +72,38 @@ comments: true
 
 
 
-#### 3.1.2. 리팩토링 기법 : 메서드를 메서드 객체로 대체
+#### ~~3.1.2. 리팩토링 기법 : 메서드를 메서드 객체로 대체~~
 
+
+
+## 4. 반대의견
+
+### 4.1. 단위를 많이 두면 성능이 떨어진다
+
+> 단위를 짧게 작성하면 결국 단위 개수가 늘어날 테고 그러다 보면 메서드 호출 또한 잦아지곘죠. 성능상 좋을 게 없습니다.
+
+이론적으로는 단위가 많아지면 긴 단위를 적게 작성하는 것에 비해 메서드 호출 횟수가 증가하면서 성능에 부정적인 영향을 끼칩니다. 호출을 한 번 할 때마다 자바 가상머신(JVM)이 할 일이 아주 조금이라도 늘어나겠죠. 그러나 실은 최악의 경우를 생각해도 기껏해야 밀리 초 단위 정도의 성능 저하에 불과하기 때문에 크게 문제가 되지는 않습니다.
+
+
+
+### 4.2. 코드를 펼치면 더 읽기 어렵다
+
+> 코드를 여러 단위로 펼치면 읽기가 어렵습니다.
+
+실제로 필자의  경우에도 단일책임원칙으로 메서드를 작은 단위로 작성하고, 여러 곳에서 해당 메서드를 사용할 경우 간혹 오히려 가독성이 더 떨어지는 것을 경험할 때가 있습니다. 이런 문제가 발생하였을 때 필자의 개인적인 생각은 모델링이 잘못되었 경우라고 생각합니다.
+
+
+
+### 4.3. 도저히 단위를 나눌 수 없다
+
+> 절대로 단위를 나눌 수 없어요.
+
+의외로 메서드를 나누기가 까다로운 경우도 있습니다. 예를 덜어, 자바의 case문과 SQL 쿼리 문이 대표적인 예입니다. 해당 문제는 **메서드 추출** 기법으로도 직접적인 추출은 불가능 합니다.(swict 문을 다루는 방법을 추후에 다시 소개합니다)
+
+SQL문과 같은 것들은 가이드라인이 정해져 있지는 않습니다. 하지만 리팩토링이 어려워 보이더라도 그냥 무시하고 넘어가지 마시고, 팀 동료나 리더에게 이슈를 제기하여 좀 더 다양한 측면으로 고민해 보시는것을 추천드립니다.
+
+
+
+### 4.4. 단위를 나눈다고 별반 나아질건 없다
+
+각 단위가 하는 일이 무엇인지를 잘 나타내는 이름을 메서드명으로 작명을 하게되면 코드를 전부 다 뜯어 보지 않더라도 해당 코드가 어떻게 동작하는지 개발자가 쉽게 이해할 수 있습니다. **기능을 잘 나타내는 이름으로** 메서드를 작성하는 것이 중요합니다.
