--- a/_posts/02.Java/2018-02-18-[클린코드] 들어가며.md
+++ b/_posts/02.Java/2018-02-18-[클린코드] 들어가며.md
@@ -3,7 +3,7 @@ layout: post
 title: "[클린코드] 들어가며"
 subtitle: "Java"
 categories: document
-tags: java
+tags: java, cleancode
 published: true
 comments: true
 ---
