--- a/_posts/02.Java/2018-02-21-[클린코드] 1장 코드단위를 짧게하라.md
+++ b/_posts/02.Java/2018-02-21-[클린코드] 1장 코드단위를 짧게하라.md
@@ -3,7 +3,7 @@ layout: post
 title: "[클린코드] 1장 코드단위를 짧게하라"
 subtitle: "Java"
 categories: document
-tags: java
+tags: java, cleancode
 published: true
 comments: true
 ---
