--- a/_posts/02.Java/2018-02-22-[클린코드] 2장 코드단위는 간단하게 짜라.md
+++ b/_posts/02.Java/2018-02-22-[클린코드] 2장 코드단위는 간단하게 짜라.md
@@ -3,7 +3,7 @@ layout: post
 title: "[클린코드] 2장 코드단위는 간단하게 짜라"
 subtitle: "Java"
 categories: document
-tags: java, cleancode
+tags: java cleancode
 published: false
 comments: true
 ---
