--- a/_posts/02.Java/2018-02-22-[클린코드] 2장 코드단위는 간단하게 짜라.md
+++ b/_posts/02.Java/2018-02-22-[클린코드] 2장 코드단위는 간단하게 짜라.md
@@ -21,3 +21,90 @@ comments: true
 | 목표 | **단위당 분기점은 4개로 제한한다.**                          |
 | 실천 | **복잡한 단위는 더 잘게 나누고** 서로 뭉쳐 있지 않게 한다.   |
 | 효과 | 분기점 개수가 줄면 **단위 수정 및 테스트가 쉬워지고** 유지보수성이 개선된다. |
+
+복잡도는 종종 논란이 되는 품질 특성입니다. 코드가 복잡하다는 의미는 사람에 따라서 어느정도 달라질 수 있습니다. 하지만 코드를 수정하는데 많은 시간이 소요되기 시작하는 어떤 경계는 분명 존재합니다. 유지보수 가능한 코드를 작성하기 위해서는 복잡도에 제한을 두어야 합니다. 그렇다면 복잡도는 어떻게 측정할 수 있을까요? 일반적인 방법으로는 분기점 개수를 세어보는 것입니다.
+
+분기점 개수 + 1이 순환 복잡도(맥커브 복잡도)이며, 단위를 커버하는데 필요한 최소한의 테스트 케이스 개수를 뜻합니다.
+
+
+
+## 2. 필요성
+
+단위당 분기점을 줄여야 하는 이유는 다음 두가지로 요약할 수 있습니다.
+
+- 간단한 단위는 복잡한 단위보다 이해하기 쉽고 수정하기 쉽자.
+- 간단한 단위는 테스트하기 쉽다.
+
+
+
+### 2.1. 간단한 단위는 수정하기 쉽다
+
+복잡한 단위는 분석하기도 어렵고 수정하기도 쉽지 않습니다.
+
+### 2.2. 간단한 단위는 테스트하기 쉽다
+
+단위 테스트를 쉽게 하기 위해서라도 단위는 간단하게 작성해야 합니다. 분기점이 많은 단위는 그만큼 많은 테스트코드를 작성해야 커버할 수 있습니다.
+
+
+
+## 3. 적용 가이드
+
+### 3.1. 조건문 체인 다루기
+
+if-else 문은 if 조건문을 만날때 마다 판단합니다. 조건들이 서로 배타적인 관계라면 switch 문을 사용하면 됩니다.
+
+조건문 체인의 복잡도는 여러가지 방법으로 단순화할 수 있습니다. 상황별로 장단점을 잘 판단하여 가장 적합한 방법을 선택하여 코드를 작성해야 합니다. 아래의 switch문의 복잡도를 낮출 수 있는 두가지 방법이 있습니다.
+
+```java
+public class FlagFactory {
+
+	public List<Color> getFlagColors(Nationality nationality) {
+        List<Color> result;
+        switch (nationality) {
+        case DUTCH:
+            result = Arrays.asList(Color.RED, Color.WHITE, Color.BLUE);
+            break;
+        case GERMAN:
+            result = Arrays.asList(Color.BLACK, Color.RED, Color.YELLOW);
+            break;
+        case BELGIAN:
+            result = Arrays.asList(Color.BLACK, Color.YELLOW, Color.RED);
+            break;
+        case FRENCH:
+            result = Arrays.asList(Color.BLUE, Color.WHITE, Color.RED);
+            break;
+        case ITALIAN:
+            result = Arrays.asList(Color.GREEN, Color.WHITE, Color.RED);
+            break;
+        case UNCLASSIFIED:
+        default:
+            result = Arrays.asList(Color.GRAY);
+            break;
+        }
+        return result;
+    }
+}
+```
+
+#### 3.1.1. Map 자료구조 사용
+
+이렇게 리팩토링하면 getFlagColors의 맥캐브 복잡도는 7에서 2로 감소합니다.
+
+```java
+private static Map<Nationality, List<Color>> FLAGS =
+	new HashMap<Nationality, List<Color>>();
+
+static {
+    FLAGS.put(DUTCH, Arrays.asList(Color.RED, Color.WHITE, Color.BLUE));
+    FLAGS.put(GERMAN, Arrays.asList(Color.BLACK, Color.RED, Color.YELLOW));
+    FLAGS.put(BELGIAN, Arrays.asList(Color.BLACK, Color.YELLOW, Color.RED));
+    FLAGS.put(FRENCH, Arrays.asList(Color.BLUE, Color.WHITE, Color.RED));
+    FLAGS.put(ITALIAN, Arrays.asList(Color.GREEN, Color.WHITE, Color.RED));
+}
+
+public List<Color> getFlagColors(Nationality nationality) {
+    List<Color> colors = FLAGS.get(nationality);
+    return colors != null ? colors : Arrays.asList(Color.GRAY);
+}
+```
+
