--- a/_posts/99.Meet up/2018-03-09-사내 세미나.md
+++ b/_posts/99.Meet up/2018-03-09-사내 세미나.md
@@ -1,4 +1,12 @@
-
+---
+layout: post
+title: "사내 세미나"
+subtitle: "Meet up"
+categories: document
+tags: meetup
+published: false
+comments: true
+---
 
 ## 1. AWS [API gateway] + [lombda] 맛보기
 
